.provarCaches/00D5f000005vwGkEAI/objects/rstk__soisalespay__c.object
<CustomObject>
    <description>soisalespay__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soisalespay_soisales__r.Name &amp; &apos;_&apos; &amp; TEXT(NOW())</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soisalespay_soisales__c &amp; &apos;_&apos; &amp;  rstk__soisalespay_seq__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_checkno__c</fullName>
        <inlineHelpText>Check number of Commission check.</inlineHelpText>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_comments__c</fullName>
        <inlineHelpText>Comments (up to 100 characters)</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_paidamount__c</fullName>
        <inlineHelpText>Commission amount paid.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_paiddate__c</fullName>
        <inlineHelpText>Date check created.</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_paybatchno__c</fullName>
        <inlineHelpText>AP batch number for this payment.</inlineHelpText>
        <label>Payment Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_soisales__c</fullName>
        <inlineHelpText>Salesperson on this Invoice Line.</inlineHelpText>
        <label>Invoice Line Salesperson</label>
        <referenceTo>rstk__soisales__c</referenceTo>
        <relationshipLabel>Commission Payment Detail</relationshipLabel>
        <relationshipName>soisalessoisalespay</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_spersn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated Salesperson.</inlineHelpText>
        <label>Salesperson ID</label>
        <referenceTo>rstk__sosales__c</referenceTo>
        <relationshipLabel>Commission Payment Detail</relationshipLabel>
        <relationshipName>sosalessoisalespay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soisalespay_voucher__c</fullName>
        <inlineHelpText>Voucher Number of Payment.</inlineHelpText>
        <label>AP Voucher Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Commission Payment Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Payment Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__PaidPayment_Validation</fullName>
        <active>true</active>
        <description>Paid Amount must be greater than 0</description>
        <errorConditionFormula>rstk__soisalespay_paidamount__c &lt;= 0</errorConditionFormula>
        <errorMessage>Paid Amount must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>